MAJ + INTEGRATION RSS

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="bd-example">
   <div class="mastheader">
     <div class="mastheader-logo">
-      <a href="/docs">
+      <a href="index.html">
         <img alt="SNCF" src="scripts/assets/img/brand/ter_hdf-logo.png" width="70" />
       </a>
     </div>
@@ -118,7 +118,7 @@
                 </a>
               </li>
               <li class="d-none d-lg-flex">
-                <a href="#" class="mastnav-item">
+                <a href="event.html" class="mastnav-item">
                   <i class="icons-large-warning icons-size-1x5" aria-hidden="true"></i>
                   <span class="font-weight-medium">Signaler Evènement</span>
                 </a>
@@ -131,14 +131,15 @@
               </li>
             </ul>
             <div class="mastnav-bottom d-none d-lg-block">
-              <a href="#" class="mastnav-item mastnav-item-horizontal">
+              <a href="support.html" class="mastnav-item mastnav-item-horizontal">
                 <i class="icons-support icons-size-1x5" aria-hidden="true"></i>
                 <span class="font-weight-medium">Support</span>
               </a>
             </div>
           </nav>  
     </body>
-  <body>
+<!--###### CODE DE LA PAGE ######-->
+  <body><br><br>
     <div class="card overflow-hidden" style="width: 50%; padding: 1%; margin-top: 5%; margin-left: auto; margin-right: auto;">
       <h1 class="display-1">Plan de la ligne:</h1>
       <div class="text-center">
