--- a/index.html
+++ b/index.html
@@ -139,12 +139,16 @@
           </nav>  
     </body>
 <!--###### CODE DE LA PAGE ######-->
-  <body><br><br>
+  <body><center><br><br>
     <div class="card overflow-hidden" style="width: 50%; padding: 1%; margin-top: 5%; margin-left: auto; margin-right: auto;">
       <h1 class="display-1">Plan de la ligne:</h1>
       <div class="text-center">
         <img src="img/plan_proxi_p44.png" class="rounded" height="95%" width="95%" alt="Plan ligne P44 - Arras <> Douai">
       </div>
     </div>
+    <div class="card overflow-hidden" style="width: 20%; padding: 1%; margin-top: 5%; margin-left: auto; margin-right: auto;">
+      <script src="//rss.bloople.net/?url=https%3A%2F%2Fter-hdf-p44.netlify.app%2Frss%2Finfo_traffic.rss&showicon=true&type=js"></script>
+    </div>
+    <br>
   </body>    
 </html>
