--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </a>
               </li>
               <li>
-                <a href="#" class="mastnav-item">
+                <a href="info_traffic.html" class="mastnav-item">
                   <i class="icons-large-information icons-size-1x5" aria-hidden="true"></i>
                   <span class="font-weight-medium">Info Traffic</span>
                 </a>
@@ -146,8 +146,19 @@
         <img src="img/plan_proxi_p44.png" class="rounded" height="95%" width="95%" alt="Plan ligne P44 - Arras <> Douai">
       </div>
     </div>
-    <div class="card overflow-hidden" style="width: 20%; padding: 1%; margin-top: 5%; margin-left: auto; margin-right: auto;">
-      <script src="//rss.bloople.net/?url=https%3A%2F%2Fter-hdf-p44.netlify.app%2Frss%2Finfo_traffic.rss&showicon=true&type=js"></script>
+    <div class="card overflow-hidden" style="width: 38%; padding: 1%; margin-top: 5%; margin-left: auto; margin-right: auto;"><center>
+      <a href="info_traffic.html" type="button" class="btn btn-card">
+        <i class="icons-large-information icons-size-90px" aria-hidden="true"></i>
+        <span>Info Traffic</span>
+      </a>
+      <a href="horraires.html" type="button" class="btn btn-card disabled" disabled>
+        <i class="icons-large-clock icons-size-90px" aria-hidden="true"></i>
+        <span>Horraires</span>
+      </a>
+      <a href="plan.html" type="button" class="btn btn-card disabled" disabled>
+        <i class="icons-large-france icons-size-90px" aria-hidden="true"></i>
+        <span>Plan de la ligne</span>
+      </a></center>
     </div>
     <br>
   </body>    
