--- a/support.html
+++ b/support.html
@@ -100,7 +100,7 @@
                 </a>
               </li>
               <li>
-                <a href="#" class="mastnav-item">
+                <a href="info_traffic.html" class="mastnav-item">
                   <i class="icons-large-information icons-size-1x5" aria-hidden="true"></i>
                   <span class="font-weight-medium">Info Traffic</span>
                 </a>
