--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <meta name="keywords" content="SNCF, ter, hauts de france, p44, P44, arras douai," />
         <meta name="author" content="Guerinlupus" />
         <meta http-equiv="content-language" content="fr-fr">
+        <!-- CHAT -->
+        <script src="//code.tidio.co/tadopw6nxhp4nec5djz0mml4xomzk3dt.js" async></script>
         <!-- Screeb tag -->
 <script type="text/javascript">
   (function (s,c,r,ee,b) {
